--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-dom": "~16.9.0",
     "react-ionicons": "^3.1.4",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-animatable": "^1.3.3",
     "react-native-animated-hamburger": "0.0.2",
+    "react-native-autoheight-webview": "^1.4.2",
     "react-native-elements": "^1.2.7",
     "react-native-fbsdk": "^1.1.2",
     "react-native-gesture-handler": "~1.5.0",
